# moneymaker-rl

./: .gitignore  pyproject.toml
ci/: check_all.sh  check_imports.sh  check_types.sh  format.sh  test.sh
ci/config/: .flake8  .isort.cfg
moneymaker_rl/data/: __init__.py  utils.py
moneymaker_rl/factories/: __init__.py
moneymaker_rl/factories/act/: continuous_act.py  inverse_lookup_act.py
moneymaker_rl/factories/obs/: single_frame_obs.py  single_frame_pyr_obs.py
moneymaker_rl/models/: __init__.py  fcn.py  physics_transformer.py  skill_mask.py  transformer.py  transformer_cls.py  transformer_utils.py
moneymaker_rl/preprocessor/: generate_dataset.py  generate_skill_dataset.py  setup.py
moneymaker_rl/preprocessor/data/: __init__.py  ballchasing_to_replay.py  replay_to_rlgym_frames.py  rlgym_to_action_obs.py
moneymaker_rl/trainer/: setup.py  test_inference.py  train.py  train_skill.py  trainer.py
moneymaker_rl/trainer/data/: __init__.py  dataloaders.py  obs_act_dataset.py  skill_dataset.py
moneymaker_rl/trainer/utils/: __init__.py  checkpoint_manager.py  count_parameters.py  metrics.py  switch_loss.py  wandb_logger.py
