[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moneymaker_rl"
version = "0.1.0"
description = "Shared libraries for Rocket League ML"
authors = [
    {name = "rmalde"}
]
requires-python = ">=3.7,<3.10"
dependencies = [
    "numpy",
    "torch>=2.4.0",
    "tqdm",
    "rich",
]

[project.optional-dependencies]
dev = [
    "isort",
    "flake8",
    "flake8-import-order",
    "flake8-bugbear",
    "black",
    "autoflake",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["moneymaker_rl"]
package-dir = {moneymaker_rl = "moneymaker_rl"}
include-package-data = true

[tool.black]
line-length = 88
skip-string-normalization = true
preview = true
target-version = ["py37", "py38", "py39"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["moneymaker_rl"]
python_files = ["test_*.py"]
addopts = "-v --cov=moneymaker_rl --cov-report=term-missing"
